pr5/manifests/pr6/fileserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fileserver
  name: fileserver
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fileserver
  template:
    metadata:
      labels:
        app: fileserver
    spec:
      containers:
        - image: my-repo/static-files:v1-abcde
          imagePullPolicy: Always
          name: fileserver
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
