pr5/manifests/pr6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fileserver
            port:
              number: 80
